# ai-jherkin-generator

./: .gitignore  README.md  main.py  pyproject.toml
src/: browser_manager.py  config.py  element_analyzer.py  gherkin_generator.py  llm_service.py
